third_party/move/move-compiler-v2/tests/checking/typing/break_outside_loop.exp
// -- Model dump before first bytecode pipeline
module 0x8675309::M {
    private fun bar() {
        break;
        Tuple()
    }
    private fun baz(x: u64): u64 {
        if Ge<u64>(x, 5) {
          break
        } else {
          Tuple()
        };
        0
    }
    private fun foo() {
        loop {
          if true {
            break
          } else {
            break
          }
        };
        break
    }
} // end 0x8675309::M

// -- Sourcified model before first bytecode pipeline
module 0x8675309::M {
    fun bar() {
        break;
    }
    fun baz(x: u64): u64 {
        if (x >= 5) break;
        0
    }
    fun foo() {
        while (true) break;
        break
    }
}


Diagnostics:
error: missing enclosing loop statement
  ┌─ tests/checking/typing/break_outside_loop.move:6:9
  │
6 │         break
  │         ^^^^^

error: missing enclosing loop statement
   ┌─ tests/checking/typing/break_outside_loop.move:10:9
   │
10 │         break;
   │         ^^^^^

error: missing enclosing loop statement
   ┌─ tests/checking/typing/break_outside_loop.move:14:21
   │
14 │         if (x >= 5) break;
   │                     ^^^^^
